# Reference-Sound-Matcher

./: CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: EQDesigner.cpp  EQDesigner.h  Exciter.cpp  Exciter.h  MultiBandDynamics.cpp  MultiBandDynamics.h  ReferenceProfile.h  SpectrumAnalyser.cpp  SpectrumAnalyser.h  TransientDesigner.cpp  TransientDesigner.h
